[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nettrace"
version = "0.1.0"
description = "Reproducible network trace loader with bundled datasets."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "hezhiqiang" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nettrace*"]

[tool.setuptools.package-data]
nettrace = ["datasets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -s"
